@@ -62,6 +62,10 @@ See the <a href="config-filter.html">TMDA Filter Specification</a>
 for details on filter file syntax, options, and more examples.
 <br><br>
 
+The <em>collectaddys</em> script in the <strong>contrib</strong> directory
+can be used to build an initial whitelist from your existing mail archives.
+<br><br>
+
 <b>NOTE</b>: For incoming mail, tmda-filter compares the address in
 the Envelope-Sender, the "From:" header and the "Reply-To:" header
 when looking for a match.
