@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Wed Mar 27 16:53:36 2002 -->
+<!-- Mon Apr  1 13:06:39 2002 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -191,6 +191,10 @@ bobby*@peru.com
 
 See the <a href="config-filter.html">TMDA Filter Specification</a> 
 for details on filter file syntax, options, and more examples.
+<br><br>
+
+The <em>collectaddys</em> script in the <strong>contrib</strong> directory
+can be used to build an initial whitelist from your existing mail archives.
 <br><br>
 
 <b>NOTE</b>: For incoming mail, tmda-filter compares the address in
