@@ -1,3 +1,7 @@
+2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* faq.ht: Mention collectaddys in the whitelist FAQ.
+
 2002-03-27  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
 
 	* faq.ht: New entries:
